@@ -7,8 +7,14 @@ option('checks', type: 'feature', value: 'enabled', yield: true,
 option('docs', type: 'feature', value: 'auto', yield: true,
        description: 'Build documentation')
 
+option('html', type: 'feature', value: 'auto', yield: true,
+       description: 'Build paginated HTML documentation')
+
 option('lint', type: 'boolean', value: false, yield: true,
        description: 'Run code quality checks')
+
+option('singlehtml', type: 'feature', value: 'auto', yield: true,
+       description: 'Build single-page HTML documentation')
 
 option('static', type: 'boolean', value: false, yield: true,
        description: 'Statically link executables')
